added timezone package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_local_notifications:
   permission_handler:
+  timezone:
 
 dev_dependencies:
   flutter_test:
