added firebase_core and firebase_messaging packages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_local_notifications:
   permission_handler:
   timezone:
+  firebase_core:
+  firebase_messaging:
 
 dev_dependencies:
   flutter_test:
